Stopped tracking analytics ipynb, attempt 2

--- a/Business_Model.html
+++ b/Business_Model.html
@@ -13178,8 +13178,37 @@ div#notebook {
 <div class="output_area">
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>[{&#39;count(*)&#39;: 65708}]
-[{&#39;count(DISTINCT question)&#39;: 60967}]
+<pre>[{&#39;count(*)&#39;: 65737}]
+[{&#39;count(DISTINCT question)&#39;: 60995}]
+<span class="ansi-blue-intense-fg">reddit    </span>Qué significa ningo?
+<span class="ansi-blue-intense-fg">reddit    </span>Opiniones sobre el curso de guaraní en Duolingo?
+<span class="ansi-blue-intense-fg">reddit    </span>Alguna persona que habla el guaraní puede decirme estas palabras tienen algún sentido en su idioma?
+<span class="ansi-blue-intense-fg">reddit    </span>Why &#34;todo ya&#34; in Paraguayan Spanish?
+<span class="ansi-blue-intense-fg">reddit    </span>Alguna Persona que habla el guarani puede me dicer se estas palabras hacen algun sentido en su idioma?
+<span class="ansi-blue-intense-fg">reddit    </span>Alguien que habla guaraní acá.?
+<span class="ansi-blue-intense-fg">reddit    </span>Hello :) I bought this print in Argentina for my sister back in the UK, and Im trying to translate what it means... I think the first word means &#34;freedom&#34;, though I could be wrong. Any help?
+<span class="ansi-blue-intense-fg">reddit    </span>Guarani Duolingo course to teach Jopara. Thoughts?
+<span class="ansi-blue-intense-fg">reddit    </span>Looking for a partner on the battlefield?
+<span class="ansi-blue-intense-fg">reddit    </span>Anyone remember Upop?
+<span class="ansi-blue-intense-fg">reddit    </span>Does Anyone Know What They Are Building In Front Of Target &amp; Home Depot?
+<span class="ansi-blue-intense-fg">reddit    </span>Attorneys specializing in representing home owners against HOA regarding passive-aggressive common area landscaping conflict? [Serious]
+<span class="ansi-blue-intense-fg">reddit    </span>Whats it like being suburban?
+<span class="ansi-blue-intense-fg">reddit    </span>CAN I RECOMMEND THIS AS THE FIRST LINK IN THE SIDEBAR?
+<span class="ansi-blue-intense-fg">reddit    </span>What are the turks doing in Afrin?
+<span class="ansi-blue-intense-fg">reddit    </span>Looking for hidden wiring suggestions to get light strip underneath single cabinet on left hand side of sink. There is a plug in behind the microwave and will be using that as main power source. Will be buying govee (sp?) brand
+<span class="ansi-blue-intense-fg">reddit    </span>How do I fix an LED strip thats burnt at the socket?
+<span class="ansi-blue-intense-fg">reddit    </span>What do I do about that is there a way to fix it?
+<span class="ansi-blue-intense-fg">reddit    </span>Does anyone know if I can cut one led out from the end of the strip and then wire it somewhere in the middle of the LEDs so it lights up with the rest, like imagine a line of strips but then with 1 led coming up?
+<span class="ansi-blue-intense-fg">reddit    </span>What is The Best and powerful Security Solar flood lights? Here The article you may know more about this. Some days ago i have collected this blog from a search engine, which is very very helpful to me. Also, it becomes a help to you too. Thank You
+<span class="ansi-blue-intense-fg">reddit    </span>One of the wires broke off howbdo I fixed my lights work again?
+<span class="ansi-blue-intense-fg">reddit    </span>What is The best LED Solar Flood Lights?
+<span class="ansi-blue-intense-fg">reddit    </span>What are the disadvantages of LEDs?
+<span class="ansi-blue-intense-fg">reddit    </span>Brand new light strip and these aren’t working right. Can anyone help?
+<span class="ansi-blue-intense-fg">reddit    </span>Hi! I am trying to light 90 strips of LEDs w/ 5-10 LEDs in each strip. Ik i can connect all of them with wires, but i need the ends of each strip to be wireless. Any way that the LEDs will work based on either pic drew? I know i will need more parts, &amp; if
+<span class="ansi-blue-intense-fg">reddit    </span>Anybody know where I can get LED’s like Ninja’s setup? Never watched him but those look really sleek
+<span class="ansi-blue-intense-fg">reddit    </span>Is it possible to get 25ft of color changing LED strip from one controller and one remote?
+<span class="ansi-blue-intense-fg">reddit    </span>HELP My LED light strip controller is screwed up. The colours are all jumbled up. When I press the power button, it turns green and when I press the red button, it shows me green. Does anyone else have the same issue?
+<span class="ansi-blue-intense-fg">reddit    </span>Hey BOTES fanatics, who cant appreciate all of these great BOTES?
 <span class="ansi-blue-intense-fg">reddit    </span>Ferdie the goat gets new legs! - have an animal in need of a prosthetic? were now casting for season 2 of Wizard of Paws, receive a free prosthetic, email us at bionicpetscasting@gmail.com
 <span class="ansi-blue-intense-fg">reddit    </span>A little too much &#34;grass&#34;?
 <span class="ansi-blue-intense-fg">reddit    </span>When talking about Cerberus, the 3 headed dog guarding hell, should you use plural or singular? Like I will pet the dog/dogs?
@@ -13251,38 +13280,6 @@ div#notebook {
 <span class="ansi-blue-intense-fg">reddit    </span>What IS Stoichiometry??
 <span class="ansi-blue-intense-fg">reddit    </span>I picked these up at a flea market today. Anyone have any info on them?
 <span class="ansi-blue-intense-fg">reddit    </span>Spencerian slant notepads/sheets?
-<span class="ansi-blue-intense-fg">reddit    </span>How is it living in Yeovil, Somerset?
-<span class="ansi-blue-intense-fg">reddit    </span>Do you guys remember this little gem?
-<span class="ansi-blue-intense-fg">reddit    </span>When did you realise you were XXX bitch triple X rated?
-<span class="ansi-blue-intense-fg">reddit    </span>How many of us sad lads are sitting here alone on new years eve?
-<span class="ansi-blue-intense-fg">reddit    </span>Any Rp Servers still active?
-<span class="ansi-blue-intense-fg">reddit    </span>Is it worth buying the game now?
-<span class="ansi-blue-intense-fg">reddit    </span>Game Wednesday at 9?
-<span class="ansi-blue-intense-fg">reddit    </span>Game tonight? Click on this now!
-<span class="ansi-blue-intense-fg">reddit    </span>Our Thirty fourth episode published on October Second 2019. We compare Machi Koro vs Space Base. Then we discuss the Pathfinder free RPG Day adventure &#34;We Be Heroes?&#34;.
-<span class="ansi-blue-intense-fg">reddit    </span>   1v1 anyone? 
-<span class="ansi-blue-intense-fg">reddit    </span>A new study debunks the benefits of segregation by 
-sex in the classroom, and says the practice does 
-more harm than good. Should it be illegal? 
-<span class="ansi-blue-intense-fg">reddit    </span>Women students at coeducational and womens 
-colleges: How do their experiences compare?
-<span class="ansi-blue-intense-fg">reddit    </span>Drape suspended?
-<span class="ansi-blue-intense-fg">reddit    </span>Hey I made a Nebraska Rideshare subreddit. I figured we ought to share our vehicles since everything is along one interstate. Ive never made a subreddit before so if it sucks, well screw you. You can be a mod if youre so smart. Tell your friends so maybe 
-<span class="ansi-blue-intense-fg">reddit    </span>Can I get an upvote?
-<span class="ansi-blue-intense-fg">reddit    </span>Is anyones cox slow?
-<span class="ansi-blue-intense-fg">reddit    </span>Why the circle jerk?
-<span class="ansi-blue-intense-fg">reddit    </span>Why arent there any meetups anymore?
-<span class="ansi-blue-intense-fg">reddit    </span>Anyone else agree Michelle Keegan looks like a young Monica?
-<span class="ansi-blue-intense-fg">reddit    </span>Monica Bellucci .. Elegant Milf..Anyone wanna talk about her ?
-<span class="ansi-blue-intense-fg">reddit    </span>Anyone here have a telegram sticker pack for Monica bellucci?
-<span class="ansi-blue-intense-fg">reddit    </span>Where can I get a Finn skin? I want to be like abc.
-<span class="ansi-blue-intense-fg">reddit    </span>server down for anybody else?
-<span class="ansi-blue-intense-fg">reddit    </span>Fulpstation u gud?
-<span class="ansi-blue-intense-fg">reddit    </span>how do you look at your notes?
-<span class="ansi-blue-intense-fg">reddit    </span>         rules?
-<span class="ansi-blue-intense-fg">reddit    </span>first the game, now discord?
-<span class="ansi-blue-intense-fg">reddit    </span>am i allowed 2 say da n word? omg omg dont tell my mom!!111
-<span class="ansi-blue-intense-fg">reddit    </span>Do you like Kylie when she is soft?
 </pre>
 </div>
 </div>
